# ALVR

./: Cargo.toml  Linux.md  README.md  alvr_pc.code-workspace
.github/workflows/: prepare-release.yml  rust.yml
alvr/client_core/: Cargo.toml
alvr/client_core/src/: c_api.rs  connection.rs  lib.rs  sockets.rs
alvr/client_openxr/: Cargo.toml
alvr/common/src/: version.rs
alvr/dashboard/: Cargo.toml
alvr/dashboard/src/: data_sources.rs  main.rs  mix_req.rs  mix_req_linux.rs  steamvr_launcher.rs
alvr/dashboard/src/dashboard/: mod.rs
alvr/dashboard/src/dashboard/components/: about.rs  notifications.rs
alvr/events/src/: lib.rs
alvr/filesystem/src/: lib.rs
alvr/server/: Cargo.toml
alvr/server/cpp/platform/win32/: NvEncoder.cpp
alvr/server/src/: connection.rs  sockets.rs  web_server.rs
alvr/server_io/: Cargo.toml
alvr/server_io/src/: lib.rs
alvr/session/src/: lib.rs  settings.rs
alvr/sockets/: Cargo.toml
alvr/sockets/src/: control_socket.rs  lib.rs  mix_common.rs  mix_lib.rs  mix_lib_linux.rs
alvr/xtask/src/: build.rs  dependencies.rs
config/: mix.json  session.bak
