[package]
name = "alvr_sockets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
alvr_common.workspace = true
alvr_session.workspace = true

bincode = "1"
serde = "1"
serde_json = "1"
socket2 = "0.5"
winapi = "0.3"
# port_check = "0.1.5"
# regex = "1.4.2"
rand = "0.8"
rust-ini = "0.17.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.50.0"